[package]
name = "pavex_bp_schema"
version.workspace = true
description = "The schema used to (de)serialize a Pavex Blueprint"
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
pavex_reflection = { path = "../pavex_reflection", version = "=0.1.31" }
workspace_hack = { version = "0.1", path = "../workspace_hack" }
