[package]
name = "pavex_bp_schema"
version.workspace = true
description = "The schema used to (de)serialize a Pavex Blueprint"
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
pavex_reflection = { path = "../pavex_reflection", version = "=0.1.49" }
px_workspace_hack = { version = "0.1", path = "../px_workspace_hack" }
