[package]
name = "pavex_cli"
version.workspace = true
description = "The companion CLI for Pavex, a Rust framework to build API services and web applications."
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "pavex"
path = "src/main.rs"

[[test]]
name = "ui_tests"
harness = false

[build-dependencies]
vergen = { workspace = true }

[dependencies]
pavexc_cli_client = { path = "../pavexc_cli_client", version = "0.1.33" }
clap = { version = "4", features = ["derive", "env"] }
pavex_miette = { path = "../pavex_miette", version = "0.1.33" }
miette = { version = "6.0.1" }
fs-err = "2.7.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-chrome = { version = "0.7" }
tracing = "0.1"
anyhow = "1"
thiserror = "1.0.56"
guppy = "0.17"
supports-color = { version = "3.0.0" }
xdg-home = "1.0.0"
sha2 = "0.10.8"
zip = "0.6.6"
xz2 = "0.1.7"
tar = "0.4.40"
bytes = "1.5.0"
tempfile = "3"
ureq = { version = "2.9.1", features = ["json"] }
remove_dir_all = "0.8.2"
config = { version = "0.14.0", features = [] }
libc = { version = "0.2.152", features = [] }
windows-sys = { version = "0.52.0", features = [] }
cargo-like-utils = "0.1.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8.8"
semver = { version = "1.0.21", features = ["serde"] }
serde_json = "1.0.111"
self-replace = "1.3.7"
hex = "0.4.3"
secrecy = { version = "0.8.0", features = ["serde"] }
clap-stdin = "0.4.0"
owo-colors = "4.0.0"
anstyle = "1.0.6"

[dev-dependencies]
pavex_test_runner = { path = "../pavex_test_runner" }
# Enable more expensive debug assertions when building for testing purposes
pavexc = { path = "../pavexc", features = ["debug_assertions"] }
