[package]
name = "pavex_cli"
version.workspace = true
description = "The companion CLI for Pavex, a Rust framework to build API services and web applications."
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "pavex"
path = "src/main.rs"

[[test]]
name = "ui_tests"
harness = false

[build-dependencies]
vergen-gitcl = { workspace = true }
anyhow = { workspace = true }

[dependencies]
pavexc_cli_client = { path = "../pavexc_cli_client", version = "0.1.54" }
pavex_cli_deps = { path = "../pavex_cli_deps", version = "0.1.54" }
clap = { workspace = true, features = ["derive", "env"] }
pavex_miette = { path = "../pavex_miette", version = "0.1.54" }
miette = { workspace = true }
fs-err = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tracing-chrome = { workspace = true }
tracing = { workspace = true, default-features = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
guppy = { workspace = true }
supports-color = { workspace = true }
xdg-home = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }
xz2 = { workspace = true }
tar = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
ureq = { workspace = true, features = ["json"] }
remove_dir_all = { workspace = true }
config = { workspace = true, features = [] }
libc = { workspace = true, features = [] }
windows-sys = { workspace = true, features = [] }
cargo-like-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
self-replace = { workspace = true }
hex = { workspace = true }
clap-stdin = { workspace = true }
owo-colors = { workspace = true }
anstyle = { workspace = true }
reqwest-middleware = { workspace = true, features = ["json"] }
reqwest-tracing = { workspace = true }
reqwest-retry = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "fs"] }
redact = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
ring = { workspace = true }
pem = { workspace = true }
time = { workspace = true }

[dev-dependencies]
pavex_test_runner = { path = "../pavex_test_runner" }
# Enable more expensive debug assertions when building for testing purposes
pavexc = { path = "../pavexc", features = ["debug_assertions"] }
