[package]
name = "pavex_cli_client"
version.workspace = true
description = "A convenient Rust interface to execute Pavex CLI commands."
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
pavex = { path = "../pavex", version = "0.1.34" }
thiserror = "1.0.56"
