[package]
name = "pavex_cli_client"
version.workspace = true
description = "A convenient Rust interface to execute Pavex CLI commands."
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
pavex = { path = "../pavex", version = "0.1.80" }
thiserror = { workspace = true }
