[package]
name = "pavex_cli_deps"
description = "An internal crate to share some dependency management logic between Pavex's CLIs, `pavex` and `pavexc`."
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
pavex_cli_shell = { path = "../pavex_cli_shell", version = "0.2.0" }
cargo-like-utils = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
px_workspace_hack = { version = "0.1", path = "../px_workspace_hack" }
