[package]
name = "pavex_cli_flock"
description = "An internal crate to share file-locking logic between Pavex's CLIs, `pavex` and `pavexc`."
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
pavex_cli_shell = { path = "../pavex_cli_shell", version = "0.2.5" }
tracing = { workspace = true }
libc = { workspace = true }
fs-err = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
