[package]
name = "pavex_macros"
version.workspace = true
description = "Procedural macros for the Pavex framwork."
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
px_workspace_hack = { version = "0.1", path = "../px_workspace_hack" }

[dev-dependencies]
trybuild = { workspace = true }
pavex = { path = "../pavex" }
serde = { workspace = true, features = ["derive"] }
