[package]
name = "pavex_miette"
version = "0.1.8"
description = "A custom Miette theme for Pavex errors."
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
owo-colors = "3"
textwrap = "0.16"
unicode-width = "0.1"
miette = { version = "5", features = ["fancy"] }
supports-hyperlinks = { version = "2" }
supports-color = { version = "2" }
supports-unicode = { version = "2" }
terminal_size = { version = "0.3" }
