[package]
name = "pavex_miette"
version.workspace = true
description = "A custom Miette theme for Pavex errors."
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
owo-colors = "3"
textwrap = "0.16"
unicode-width = "0.1"
miette = { version = "6.0.1", features = ["fancy"] }
supports-hyperlinks = { version = "3.0.0" }
supports-color = { version = "3.0.0" }
supports-unicode = { version = "3.0.0" }
terminal_size = { version = "0.3" }
workspace_hack = { version = "0.1", path = "../workspace_hack" }
