[package]
name = "pavex_miette"
version.workspace = true
description = "A custom Miette theme for Pavex errors."
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
owo-colors = { workspace = true }
textwrap = { workspace = true }
unicode-width = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
supports-hyperlinks = { workspace = true }
supports-color = { workspace = true }
supports-unicode = { workspace = true }
terminal_size = { workspace = true }
px_workspace_hack = { version = "0.1", path = "../px_workspace_hack" }
