[package]
name = "pavex_reflection"
version.workspace = true
description = "Utility types when working with compile-time reflection in Rust"
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
