[package]
name = "pavex_reflection"
version.workspace = true
description = "Utility types when working with compile-time reflection in Rust"
keywords = ["pavex"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
workspace_hack = { version = "0.1", path = "../workspace_hack" }
