[package]
name = "pavex_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
matchit = "0.7"
http = "0.2"
bytes = "1"
http-body = "0.4.5"
anyhow = "1"
futures-util = "0.3"
mime = "0.3"
percent-encoding = "2"
thiserror = "1"