[package]
name = "pavex_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
matchit = "0.7"
http = "0.2"
bytes = "1"
http-body = "0.4.5"
anyhow = "1"
futures-util = "0.3"
mime = "0.3"
percent-encoding = "2"
thiserror = "1"
serde = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
pavex_builder = { path = "../pavex_builder" }
