[package]
name = "pavex_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
bytes = "1"
http = "0.2"
http-body = "0.4.5"
anyhow = "1"
futures-util = "0.3"
mime = "0.3"
thiserror = "1"
serde = "1"
pavex_macros = { path = "../pavex_macros" }

# Route parameters
matchit = "0.7"
percent-encoding = "2"

# Query parameters
serde_html_form = "0.1"

# Json body extractor
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
pavex_builder = { path = "../pavex_builder" }
tokio = { version = "1", features = ["macros"] }
insta = "1.29.0"