[package]
name = "pavex_session"
version.workspace = true
description = "HTTP sessions support for Pavex"
keywords = ["pavex", "sessions", "HTTP", "auth"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pavex = { version = "0.1.49", path = "../pavex", default-features = false, features = [
    "cookie",
] }
pavex_tracing = { version = "0.1.49", path = "../pavex_tracing" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
humantime-serde = { workspace = true }
time = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
px_workspace_hack = { version = "0.1", path = "../px_workspace_hack" }
