[package]
name = "pavex_session"
version.workspace = true
description = "HTTP sessions support for Pavex"
keywords = ["pavex", "sessions", "HTTP", "auth"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(pavex_ide_hint)'] }

[dependencies]
pavex = { version = "0.1.79", path = "../pavex", default-features = false, features = [
    "cookie",
] }
pavex_tracing = { version = "0.1.79", path = "../pavex_tracing" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
px_workspace_hack = { version = "0.1", path = "../px_workspace_hack" }

[dev-dependencies]
static_assertions = { workspace = true }
pavex_session_memory_store = { path = "../pavex_session_memory_store" }
googletest = "0.13.0"
itertools = { workspace = true }
